Corrected README for input parameters, added tags to client and server

--- a/src/example/assignments/util/inputParameters/README
+++ b/src/example/assignments/util/inputParameters/README
@@ -1,9 +1,9 @@
 Run ExampleSimulationParametersControllerUser and see how the following inputs 
 are translated to method calls:
 p
-a t
-a f
-i t
-atomic t
+a true
+a false
+i true
+atomic true
 e
-l f
+l false
